Image file name edit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="10px">
         <tr>
-            <td><img src="images/Reji Oomman.png" alt="Reji Oomman Profile Picture"></td>
+            <td><img src="images/reji oomman.png" alt="Reji Oomman Profile Picture"></td>
             <td><h1>Reji Oomman</h1>
                 <p><em>Head of Revenue Management</em>-<strong><a href="https://www.internetmoguls.com/" target="_blank">Internet Moguls</a></strong></p>
                 <p>With 16 years of Hospitality Industry, I would ❤ to share my experience through this site</p></td>
