--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,6 @@
         <input type="submit">
 
     </form>
-    <h3><a href="Index.html">Go back to Home page</a></h3>
+    <h3><a href="index.html">Go back to Home page</a></h3>
 </body>
 </html>
