--- a/hobbies.html
+++ b/hobbies.html
@@ -11,6 +11,6 @@
         <li><a href="https://en.wikipedia.org/wiki/Graphology" target="_blank">Graphology</a></li>
         <li><a href="https://codepen.io/" target="_blank">Coding</a></li>
     </ol>
-    <h3><a href="Index.html">Go back to Home page</a></h3>
+    <h3><a href="index.html">Go back to Home page</a></h3>
 </body>
 </html>
